[package]
name = "tor_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
arti = "1.0.0" # Arti crate for Tor support
futures = "0.3.31"
reqwest = { version = "0.11", features = [
  "json",
  "socks",
] } # Reqwest for HTTP requests
tokio = { version = "1", features = ["full"] } # Tokio for async runtime
